[WK2] Fix unused parameter compile warning. https://bugs.webkit.org/show_bug.cgi?id=131260

Patch by Miyoung Shin <myid.m.shin@gmail.com> on 2014-04-05
Reviewed by Gyuyoung Kim.

fix unused parameter warning in the WebKit2 build.

* UIProcess/API/APIDownloadClient.h:
(API::DownloadClient::didReceiveData):
(API::DownloadClient::shouldDecodeSourceDataOfMIMEType):
(API::DownloadClient::decideDestinationWithSuggestedFilename):
(API::DownloadClient::didCreateDestination):

Canonical link: https://commits.webkit.org/149333@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@166848 268f45cc-cd09-0410-ab3c-d52691b4dbfc