Source/WebKit2/UIProcess/API/APIDownloadClient.h
@@ -48,10 +48,19 @@ public:
     virtual void didStart(WebKit::WebContext*, WebKit::DownloadProxy*) { }
     virtual void didReceiveAuthenticationChallenge(WebKit::WebContext*, WebKit::DownloadProxy*, WebKit::AuthenticationChallengeProxy*) { }
     virtual void didReceiveResponse(WebKit::WebContext*, WebKit::DownloadProxy*, const WebCore::ResourceResponse&) { }
-    virtual void didReceiveData(WebKit::WebContext*, WebKit::DownloadProxy*, uint64_t length) { }
-    virtual bool shouldDecodeSourceDataOfMIMEType(WebKit::WebContext*, WebKit::DownloadProxy*, const WTF::String& mimeType) { return true; }
-    virtual WTF::String decideDestinationWithSuggestedFilename(WebKit::WebContext*, WebKit::DownloadProxy*, const WTF::String& filename, bool& allowOverwrite) { return {}; }
-    virtual void didCreateDestination(WebKit::WebContext*, WebKit::DownloadProxy*, const WTF::String& path) { }
+    virtual void didReceiveData(WebKit::WebContext*, WebKit::DownloadProxy*, uint64_t length) { UNUSED_PARAM(length); }
+    virtual bool shouldDecodeSourceDataOfMIMEType(WebKit::WebContext*, WebKit::DownloadProxy*, const WTF::String& mimeType)
+    {
+        UNUSED_PARAM(mimeType);
+        return true;
+    }
+    virtual WTF::String decideDestinationWithSuggestedFilename(WebKit::WebContext*, WebKit::DownloadProxy*, const WTF::String& filename, bool& allowOverwrite)
+    {
+        UNUSED_PARAM(filename);
+        UNUSED_PARAM(allowOverwrite);
+        return { };
+    }
+    virtual void didCreateDestination(WebKit::WebContext*, WebKit::DownloadProxy*, const WTF::String& path) { UNUSED_PARAM(path); }
     virtual void didFinish(WebKit::WebContext*, WebKit::DownloadProxy*) { }
     virtual void didFail(WebKit::WebContext*, WebKit::DownloadProxy*, const WebCore::ResourceError&) { }
     virtual void didCancel(WebKit::WebContext*, WebKit::DownloadProxy*) { }
